Get cocktail ingredients list displaying dynamically when user adds a new ingredient

--- a/cocktailapp/src/app/search.component.css
+++ b/cocktailapp/src/app/search.component.css
@@ -4,3 +4,11 @@
     background-repeat: no-repeat;
     background-position: center center;
 }
+
+.ingredients-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center space-around;
+    align-content: space-around;
+}
