--- a/cocktailapp/src/app/search.component.html
+++ b/cocktailapp/src/app/search.component.html
@@ -1,4 +1,3 @@
-
 <mat-card class="cocktail-card">
   <mat-card-header>
     <div mat-card-avatar class="header-image"></div>
@@ -6,13 +5,19 @@
     <mat-card-subtitle>Build your home bar to find out which recipes you can make right now!</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-<mat-form-field>
-    <input type="text" placeholder="Add your ingredients" aria-label="Number" matInput [(ngModel)]="ingredientSelection" [matAutocomplete]="auto" >
-    <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" (optionSelected)="onOptionSelected()">
-      <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-        {{option}}
-      </mat-option>
-    </mat-autocomplete>
-  </mat-form-field>
-</mat-card-content>
+    <mat-form-field>
+      <input type="text" placeholder="Add your ingredients" aria-label="Number" matInput
+        [(ngModel)]="ingredientSelection" [matAutocomplete]="auto">
+      <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" (optionSelected)="onOptionSelected()">
+        <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+          {{option}}
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+    <div class="ingredients-list">
+      <ingredient *ngFor="let ing of ingredientsList" [ingredient]="ing" (deleted)="onIngredientDeleted($event)">
+      </ingredient>
+    </div>
+  </mat-card-content>
+
 </mat-card>
