--- a/cocktailapp/src/app/ingredient.component.html
+++ b/cocktailapp/src/app/ingredient.component.html
@@ -3,7 +3,7 @@
         <button mat-raised-button color="warn" (click)="delete()" class="deleteIcon">
             <fa-icon [icon]="faTrash"></fa-icon>
         </button>
-        <p class="ingredient-name">{{ingredientName || 'New Ingredient' }}</p>
+        <p class="ingredient-name">{{ingredient.name || 'New Ingredient' }}</p>
         <p class="ingredient-desc">
             {{ingredient.description}}
         </p>
