Get bootstrap layout online

--- a/cocktailapp/src/app/app.component.html
+++ b/cocktailapp/src/app/app.component.html
@@ -1,1 +1,12 @@
-<search></search>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-4">
+            <search></search>
+        </div>
+        <div class="col-lg-8">
+            <p>
+                The results component will go here.
+            </p>
+        </div>
+    </div>
+</div>
