--- a/cocktailapp/src/app/app.component.html
+++ b/cocktailapp/src/app/app.component.html
@@ -1,11 +1,11 @@
-<div class="container">
+<div class="container-fluid">
     <div class="row">
-        <div class="col-lg-4">
+        <div class="col-sm-5">
             <search></search>
         </div>
-        <div class="col-lg-8">
+        <div class="col-sm-7">
             <p>
-                The results component will go here.
+                Other component goes here
             </p>
         </div>
     </div>
