Refactor ingredient list management into its own service for cross component communication

--- a/cocktailapp/src/app/search.component.html
+++ b/cocktailapp/src/app/search.component.html
@@ -15,7 +15,7 @@
       </mat-autocomplete>
     </mat-form-field>
     <div class="ingredients-list">
-      <ingredient *ngFor="let ing of ingredientsList" [ingredient]="ing" (deleted)="onIngredientDeleted($event)">
+      <ingredient *ngFor="let ing of ingService.ingredientList" [ingredient]="ing" (deleted)="onIngredientDeleted($event)">
       </ingredient>
     </div>
   </mat-card-content>
