Add cocktail-list component and connect it to the ingredient service

--- a/cocktailapp/src/app/app.component.html
+++ b/cocktailapp/src/app/app.component.html
@@ -4,7 +4,7 @@
             <search></search>
         </div>
         <div class="col-sm-7">
-            
+            <cocktail-list></cocktail-list>
         </div>
     </div>
 </div>
