--- a/cocktailapp/src/app/search.component.html
+++ b/cocktailapp/src/app/search.component.html
@@ -1,4 +1,4 @@
-<mat-card class="cocktail-card">
+<mat-card class="search-card">
   <mat-card-header>
     <div mat-card-avatar class="header-image"></div>
     <mat-card-title>Cocktail Recipe Finder</mat-card-title>
