Add routing to project: Create cocktail detail component to display individual cocktail info

--- a/cocktailapp/src/app/app.component.html
+++ b/cocktailapp/src/app/app.component.html
@@ -1,10 +1,1 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-5">
-            <search></search>
-        </div>
-        <div class="col-sm-7">
-            <cocktail-list></cocktail-list>
-        </div>
-    </div>
-</div>
+<router-outlet></router-outlet>
