--- a/cocktailapp/src/app/cocktail.component.html
+++ b/cocktailapp/src/app/cocktail.component.html
@@ -1,8 +1,5 @@
-<mat-card class="cocktail">
+<mat-card class="cocktail" [routerLink]="['/cocktail', cocktail.id]">
     <mat-card-content>
-        <!-- <button mat-raised-button color="warn" (click)="delete()" class="deleteIcon">
-                <fa-icon [icon]="faTrash"></fa-icon>
-            </button> -->
         <p class="cocktail-name">{{cocktail.name || 'New Ingredient' }}</p>
         <img class="img-fluid" src="{{cocktail.thumbnail}}" alt="{{cocktail.name}}"/>
     </mat-card-content>
