--- a/cocktailapp/src/app/ingredient.component.css
+++ b/cocktailapp/src/app/ingredient.component.css
@@ -1,15 +1,36 @@
-.ingredient {
-    flex: 1 1 auto;
-    min-width: 50px;
-    min-height: 50px;
-    max-width: 200px;
+.ingredient-detail {
+    overflow: scroll;
+    overflow-x: hidden;
     max-height: 200px;
-    margin: 10px;
-    overflow: hidden;
+    width: 100%;
 }
 
 .deleteIcon {
-    position: absolute;
-    top: 8px;
-    right: 16px;
+    float: right;
+    margin-bottom: 10px;
+}
+
+/* Scrollbar from https://codepen.io/devstreak/pen/dMYgeO */
+.ingredient-detail::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+	border-radius: 10px;
+}
+
+.ingredient-detail::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+.ingredient-detail::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-image: -webkit-gradient(linear,
+									   left bottom,
+									   left top,
+									   color-stop(0.44, rgb(122,153,217)),
+									   color-stop(0.72, rgb(73,125,189)),
+									   color-stop(0.86, rgb(28,58,148)));
 }
