style cocktail list to ensure cocktail thumbnails fit in their containers

--- a/cocktailapp/src/app/cocktail-list.component.html
+++ b/cocktailapp/src/app/cocktail-list.component.html
@@ -1,4 +1,4 @@
-<mat-card class="cocktail-card" *ngIf="cocktails">
+<mat-card class="cocktail-card" *ngIf="cocktails.length > 0">
     <mat-card-header>
         <mat-card-title>
             Cocktails you can make
