--- a/cocktailapp/src/app/search.component.html
+++ b/cocktailapp/src/app/search.component.html
@@ -14,6 +14,8 @@
         </mat-option>
       </mat-autocomplete>
     </mat-form-field>
+  </mat-card-content>
+  <mat-card-content>
     <mat-accordion>
       <mat-expansion-panel *ngFor="let ing of ingService.ingredientList">
         <mat-expansion-panel-header>
