--- a/cocktailapp/src/app/cocktail-list.component.css
+++ b/cocktailapp/src/app/cocktail-list.component.css
@@ -4,4 +4,36 @@
     flex-wrap: wrap;
     justify-content: center space-around;
     align-content: space-around;
+    overflow: scroll;
+    overflow-x: hidden;
+    max-height: 90vh;
+}
+
+.cocktail-card {
+    background: rgba(238, 230, 230, 0.644);
+}
+
+/* Scrollbar from https://codepen.io/devstreak/pen/dMYgeO */
+.cocktail-list::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+	border-radius: 10px;
+}
+
+.cocktail-list::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+.cocktail-list::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	background-image: -webkit-gradient(linear,
+									   left bottom,
+									   left top,
+									   color-stop(0.44, rgb(122,153,217)),
+									   color-stop(0.72, rgb(73,125,189)),
+									   color-stop(0.86, rgb(28,58,148)));
 }
