--- a/cocktailapp/src/styles.css
+++ b/cocktailapp/src/styles.css
@@ -1,5 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
-@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+/* @import '@angular/material/prebuilt-themes/deeppurple-amber.css'; */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+/* body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; } */
+
+body {
+    background-color: #11a9e2;
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0d86b3), to(#11a9e2));
+    background-image: -moz-linear-gradient(#0d86b3, #11a9e2);
+    background-repeat: no-repeat;
+    padding: 100px;
+    /* text-rendering: optimizeLegibility; */
+    font: 14px/20px "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+}
+
