Adjust component background colors; fix bug in cocktail list scrolling

--- a/cocktailapp/src/app/cocktail-detail.component.css
+++ b/cocktailapp/src/app/cocktail-detail.component.css
@@ -7,14 +7,18 @@
     object-fit: cover;
 }
 
+.cocktail-ingredients {
+    margin-top: 20px;
+}
+
 .cocktail-description {
-    background-color: rgba(0, 0, 0, 0.3);
+    /* background-color: rgba(0, 0, 0, 0.3); */
     background-image: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(0, 0, 0, 0.15)), to(rgba(0, 0, 0, 0)));
     background-image: -moz-linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0));
-    width: 500px;
+    width: 100%;
     margin: 30px auto;
     padding: 15px;
-    color: #fff;
+    /* color: #fff; */
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
     border-radius: 6px;
     -moz-border-radius: 6px;
