--- a/cocktailapp/src/app/cocktail-detail.component.html
+++ b/cocktailapp/src/app/cocktail-detail.component.html
@@ -3,7 +3,7 @@
         <div class="col-sm-8">
             <mat-card class="cocktail" *ngIf="cocktail">
                 <mat-card-content>
-                    <p class="cocktail-name">{{cocktail.name || 'New Ingredient' }}</p>
+                    <h2 class="cocktail-name">{{cocktail.name || 'New Ingredient' }}</h2>
                     <div class="cocktail-ingredients">
                         <table class="table table-striped">
                             <thead>
