Update component title text

--- a/cocktailapp/src/app/cocktail-list.component.html
+++ b/cocktailapp/src/app/cocktail-list.component.html
@@ -3,7 +3,7 @@
         <mat-card-title>
             Cocktails you can make
         </mat-card-title>
-        <mat-card-subtitle>With your ingredients at home, try these cocktails!</mat-card-subtitle>
+        <mat-card-subtitle>With your ingredients, try these cocktails!</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
         <div class="cocktail-list">
