--- a/cocktailapp/src/app/search.component.html
+++ b/cocktailapp/src/app/search.component.html
@@ -1,7 +1,7 @@
 <mat-card class="search-card">
   <mat-card-header>
     <div mat-card-avatar class="header-image"></div>
-    <mat-card-title>Cocktail Recipe Finder</mat-card-title>
+    <mat-card-title>Cocktail Guidebook</mat-card-title>
     <mat-card-subtitle>Build your home bar to find out which recipes you can make right now!</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
