--- a/cocktailapp/src/app/cocktail-detail.component.css
+++ b/cocktailapp/src/app/cocktail-detail.component.css
@@ -1,37 +1,44 @@
+.wrapper {
+  margin: 0 auto;
+  width: max(50vw, 200px);
+}
+
+.cocktail-detail {
+  background-color: lightgray;
+  padding: 20px;
+}
+
 .cocktail.mat-card {
-    overflow: hidden;
-    width: 100%;
+  overflow: hidden;
+  width: 100%;
 }
 
 .cocktail-img {
-    object-fit: cover;
+  object-fit: cover;
 }
 
 .cocktail-ingredients {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .cocktail-name {
-    display: inline-block;
+  display: inline-block;
 }
 
 .back-button {
-    float: right;
+  float: right;
+}
+
+.img-wrap {
+  text-align: center;
 }
 
 .cocktail-description {
-    /* background-color: rgba(0, 0, 0, 0.3); */
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(0, 0, 0, 0.15)), to(rgba(0, 0, 0, 0)));
-    background-image: -moz-linear-gradient(rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0));
-    width: 100%;
-    margin: 30px auto;
-    padding: 15px;
-    /* color: #fff; */
-    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
-    border-radius: 6px;
-    -moz-border-radius: 6px;
-    -webkit-border-radius: 6px;
-    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(255, 255, 255, 0.3);
-    -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(255, 255, 255, 0.3);
-    -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.25), 0 1px 1px rgba(255, 255, 255, 0.3);
+  width: 100%;
+  margin: 30px auto;
+  padding: 15px;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+  border-radius: 6px;
+  -moz-border-radius: 6px;
+  -webkit-border-radius: 6px;
 }
