--- a/cocktailapp/src/app/search.component.css
+++ b/cocktailapp/src/app/search.component.css
@@ -23,6 +23,6 @@
 
 .search-card {
   /* background: rgba(238, 230, 230, 0.644); */
-  background-color: #97caef;
+  background-color: lightgray;
   font-family: var(--font);
 }
