--- a/cocktailapp/src/styles.css
+++ b/cocktailapp/src/styles.css
@@ -63,3 +63,15 @@ body {
 .search-card {
   border: 2px solid black;
 }
+
+@media only screen and (max-width: 500px) {
+  body {
+    padding: 0;
+  }
+
+  .cocktail-card,
+  .search-card,
+  .wrapper {
+    min-width: 100%;
+  }
+}
